# Linux_Terminal

./: .gitignore  CMakeLists.txt  README  README.txt  alias_manager.c  bash.sh  command_executor.c  ex1  ex1.c  ex2.c  or_and_test.sh  process_handler.c  process_manager.c  run_me  run_me.sh  string_utils.c  test.sh
Headers/: alias_manager.h  command_executor.h  constants.h  process_handler.h  process_manager.h  string_utils.h
Temp Version/: CMakeLists.txt  README.txt  alias.c  alias.h  bash.sh  ex1.c  run_me  run_me.sh
